2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add vaulting information
	* server-src/amstatus.pl: Print vaulting information
	* installcheck/success-dumper-taper.pl: Fix for vaulting information

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Keep track of all label in use

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_source_label

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_dest_label

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_DB_Catalog2_MySQL.pl,
	  installcheck/Amanda_DB_Catalog2_PgSQL.pl: Check variable is set

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm: (_finish_copy): nb_parts default to 0

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm (remove): Add a keep_label flag to
	  keep the label in the catalog

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Scan.pm: Set storage_name in
	  Amanda::Changer::Error

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/server_util.c (amcatalog_add_cmd): Fix memory leak

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcatalog.pl: New retention command
	* man/xml-source/amcatalog.8.xml: Document it

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm (Volume::has_retention): New method
	  to check if a volume have a retention
	* server-src/amtape.pl (inventory): List all retentions

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amanda-rest-server.pl: Create the dbgdir

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQLite.pm: Retry transaction on
	  /database schema has changed/
